@@ -1390,6 +1390,7 @@ function jumpstart_ex_featured_thumb_frame() {
 }
 add_filter('themeblvd_featured_thumb_frame', 'jumpstart_ex_featured_thumb_frame');
 add_filter('themeblvd_gallery_thumb_frame', 'jumpstart_ex_featured_thumb_frame');
+add_filter('themeblvd_img_frame', 'jumpstart_ex_featured_thumb_frame');
 
 /**
  * Body class
