@@ -1425,6 +1425,7 @@ function jumpstart_su_featured_thumb_frame() {
 }
 add_filter('themeblvd_featured_thumb_frame', 'jumpstart_su_featured_thumb_frame');
 add_filter('themeblvd_gallery_thumb_frame', 'jumpstart_su_featured_thumb_frame');
+add_filter('themeblvd_img_frame', 'jumpstart_su_featured_thumb_frame');
 
 /**
  * Body class
