@@ -126,6 +126,7 @@ if ( ! is_admin() || ( defined('DOING_AJAX') && DOING_AJAX ) ) {
 	add_filter( 'oembed_result', 'themeblvd_oembed_result', 10, 2 );
 	add_filter( 'embed_oembed_html', 'themeblvd_oembed_result', 10, 2 );
 	add_filter( 'wp_audio_shortcode', 'themeblvd_audio_shortcode' );
+	add_filter( 'img_caption_shortcode', 'themeblvd_img_caption_shortcode', 10, 3 );
 	add_filter( 'themeblvd_the_content', array( $GLOBALS['wp_embed'], 'run_shortcode' ), 8 );
 	add_filter( 'themeblvd_the_content', array( $GLOBALS['wp_embed'], 'autoembed' ), 8 );
 	add_filter( 'themeblvd_the_content', 'wptexturize' );
