@@ -30,6 +30,7 @@ Jump Start Changelog
 * Added new textures: Circles, Crystal, Hexagons, Polygons, Pyramids, Skulls, Tiles, and Waves
 * Added option to shade page banner images with transparent color.
 * Added filters for displaying theme menu locations, [see here](http://support.themeblvd.com/forums/topic/creating-separate-main-menu-for-logged-in-user-jump-start-2-0-beta2/#post-20720).
+* Improvements to WP `[caption]` shortcode, and auto lightbox integration.
 * Improvements, structural changes, and option changes to header of Executive theme base.
 * Allow header in Entrepreneur theme base to be configured with no background color.
 * Allow copyright helpers `%site_title%` and `%year%` to work with content element of builder (for Footer Template Sync feature).
